test/errors/python_generator_error/zs/generated_symbols/service_invalid_method_name_reserved_error.zs
package generated_symbols.service_invalid_method_name_reserved_error;

struct Request
{};

struct Response
{};

service TestService
{
    Response __eq__(Request); // starts with '_'
};
